# haskell-training

./: README.md  test.hs
Chapter01/Exercises/: Final.hs  Intermission.hs
Chapter02/Content/: Common.hs  FunctionWithLet.hs  FunctionWithWhere.hs  Learn.hs
Chapter02/Exercises/: Final.hs  Intermission.hs
Chapter03/Content/: Common.hs  GlobalLocal.hs  Print1.hs  Print2.hs  Print3.hs  Print3Broken.hs  Print3Flipped.hs
Chapter03/Exercises/: Final.hs  Intermission.hs  Reverse.hs
Chapter04/Content/: Common.hs  GreetIfCool1.hs  GreetIfCool2.hs
Chapter04/Exercises/: Final.hs  Intermission.hs
Chapter05/Content/: Common.hs  TypeInference1.hs  TypeInference2.hs
Chapter05/Exercises/: Arith3Broken.hs  Final.hs  Intermission.hs  Sing.hs
Chapter06/Content/: Common.hs  ConcreteImpliesAll.hs  DayOfWeek.hs  DayOfWeekOrd.hs  DayOfWeekOrd2.hs  Identity1.hs  Identity2.hs  MoreOperations.hs  MoreOperationsWrong.hs  OrdImpliesEq1.hs  OrdImpliesEq2.hs  Trivial1.hs  Trivial2.hs
Chapter06/Exercises/: Final.hs  Intermission.hs
Chapter07/Content/: Arith2.hs  BindExp1.hs  BindExp2.hs  BindExp3.hs  Common.hs  Constant.hs  Function.hs  GreetIfCool3.hs  HigherOrder1.hs  HigherOrder2.hs  ItIsTwo1.hs  ItIsTwo2.hs  ItIsTwo3.hs  NotPointFree.hs  PointFree.hs  RegisteredUser1.hs  RegisteredUser2.hs  ReturnBroken.hs  TupleFunctions.hs
Chapter07/Exercises/: Arith4.hs  Final.hs  Intermission.hs
Chapter08/Content/: Bottom1.hs  Bottom2.hs  Bottom3.hs  BrokenFact.hs  BrokenMaybe1.hs  BrokenMaybe2.hs  Common.hs  Divide1.hs  Divide2.hs  Divide3.hs  Factorial.hs  Fibonacci1.hs  Fibonacci2.hs  Fibonacci3.hs  Fibonacci4.hs  Maybe.hs
Chapter08/Exercises/: Final.hs  Intermission.hs  WordNumber.hs
Chapter09/Content/: Common.hs
Chapter09/Exercises/: Cipher.hs  Final.hs  Intermission.hs  PoemLines.hs
Chapter1/: Intermission.hs
Chapter1/Exercises/: Final.hs
Chapter10/Content/: Common.hs
Chapter10/Exercises/: Final.hs  Intermission.hs
Chapter11/: PrintExp.hs
Chapter11/Content/: BinaryTree.hs  Common.hs  Construct.hs  Deconstruct.hs  ExponentialFunctionType.hs  Goats1.hs  Goats2.hs  Goats3.hs  Goats4.hs  Goats5.hs  Person.hs  PersonRecord.hs  ProductOfSums.hs  StricterSumOfProducts.hs  SumOfProducts.hs
Chapter11/Exercises/: Cipher.hs  DaPhone.hs  Final.hs  Intermission.hs
Chapter12/Content/: Common.hs  Either1.hs  Either2.hs  Either3.hs  EvenAdd1.hs  EvenAdd2.hs  Maybe.hs
Chapter12/Exercises/: Final.hs
Chapter13/Content/: Common.hs
Chapter13/Content/hangman/src/: Main.hs
Chapter13/Content/hangman_newtype/: hangman.cabal
Chapter13/Content/hangman_newtype/src/: Main.hs
Chapter13/Content/hello1/: hello.cabal
Chapter13/Content/hello1/src/: Hello.hs  Main.hs
Chapter13/Content/hello2/: hello.cabal
Chapter13/Content/hello2/src/: Hello.hs
Chapter13/Exercises/: Cipher.hs  Final.hs  Intermission.hs
Chapter13/Exercises/hangman/src/: Main.hs
Chapter14/Content/addition/: Addition.hs  addition.cabal
Chapter14/Content/kicking-around-qc/: CoArbitrary.hs  KickingAround.hs  README.md  kicking-around-qc.cabal
Chapter14/Content/morse/: README.md  morse.cabal
Chapter14/Content/morse/src/: Main.hs  Morse.hs
Chapter14/Content/morse/tests/: tests.hs
Chapter14/Exercises/final/: Cipher.hs  CipherTests.hs  FinalTests.hs  README.md  final.cabal
Chapter14/Exercises/hangman/: README.md  hangman.cabal
Chapter14/Exercises/hangman/app/: Main.hs
Chapter14/Exercises/hangman/src/: Hangman.hs
Chapter14/Exercises/hangman/tests/: tests.hs
Chapter14/Exercises/intermission/: Intermission.hs  intermission.cabal
Chapter14/Exercises/word-number/: README.md  WordNumber.hs  WordNumberTest.hs  word-number.cabal
Chapter2/: Exercises.hs  Intermission.hs
Chapter2/Content/: Common.hs  FunctionWithLet.hs  FunctionWithWhere.hs  Learn.hs
Chapter2/Exercises/: Final.hs  Intermission.hs
Chapter3/: Exercises.hs  Intermission.hs
Chapter3/Content/: GlobalLocal.hs  Print2.hs  Print3Flipped.hs
Chapter3/Exercises/: Intermission.hs  Reverse.hs
Chapter4/: Exercises.hs  Intermission.hs
Chapter4/Content/: GreetIfCool1.hs  GreetIfCool2.hs
Chapter4/Exercises/: Intermission.hs
Chapter5/: Intermission.hs
Chapter5/Exercises/: Final.hs  Intermission.hs
Chapter6/: Intermission.hs
Chapter6/Exercises/: Final.hs
Chapter7/Exercises/: Arith4.hs  Final.hs
Chapter8/: Exercises.hs
Chapter9/: Cipher.hs  Exercises.hs  Intermission.hs  PoemLines.hs
Chapter9/Exercises/: Cipher.hs  Final.hs
