name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Hangman Game (educative purposes)
homepage:            https://github.com/juank-pa/haskell-training
license:             BSD3
license-file:        LICENSE
author:              Juan Carlos Pazmino
maintainer:          juankpro@outlook.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
