name:                morse
version:             0.1.0.0
license-file:        LICENSE
author:              Juan Carlos Pazmino
maintainer:          juankpro@outlook.com
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
