name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Hangman Game (educative purposes)
homepage:            https://github.com/juank-pa/haskell-training
license:             BSD3
license-file:        LICENSE
author:              Juan Carlos Pazmino
maintainer:          juankpro@outlook.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  exposed-modules:     Hangman
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , random
                     , split
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , hangman
                     , hspec
                     , transformers
                     , QuickCheck
                     , silently >= 1.2.5 && < 1.3
  default-language:    Haskell2010
